# rust-sqlite-ext-example

./: Cargo.toml  README.md  test.py
src/: lib.rs
